<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_new_tab" android:title="@string/menu_new_tab" />
    <item android:id="@+id/action_bookmarks" android:title="@string/menu_bookmarks" />
    <item android:id="@+id/action_add_bookmark" android:title="@string/menu_add_bookmark" />
    <item android:id="@+id/action_history" android:title="@string/menu_history" />
    <item android:id="@+id/action_cookies" android:title="@string/menu_cookies" />
    <item android:id="@+id/action_import_cookies" android:title="@string/menu_import_cookies" />
    <item android:id="@+id/action_incognito" android:title="@string/menu_toggle_incognito" />
    <item android:id="@+id/action_desktop" android:title="@string/menu_toggle_desktop" />
    <item android:id="@+id/action_find" android:title="@string/menu_find_in_page" />
    <item android:id="@+id/action_userscripts" android:title="@string/menu_userscripts" />
    <item android:id="@+id/action_share" android:title="@string/menu_share" />
    <item android:id="@+id/action_copy_url" android:title="@string/menu_copy_url" />
    <item android:id="@+id/action_clear" android:title="@string/menu_clear_data" />
    <item android:id="@+id/action_settings" android:title="@string/menu_settings" />
</menu>
